--- a/compendium/mechanics.html
+++ b/compendium/mechanics.html
@@ -89,7 +89,7 @@
 <ul>
   <li><strong>Vital stats</strong> are the most important to watch and may fluctuate frequently.</li>
   <li><strong>Primary stats</strong> shape your overall development.</li>
-  <li><strong>Secondary stats</strong> affect how well you do in battle.</li>
+  <li><strong>Secondary stats</strong> affect your potency in battle.</li>
 </ul>
 
 <h3 id="vital-stats">Vital Stats</h3>
@@ -182,7 +182,7 @@
     </tr>
     <tr>
       <td>Defence</td>
-      <td>Decreases damage taken by a <em>flat value</em>. Calculated before reductions.<br /><details><summary class="bar-descriptor">Flat value?</summary>This means that every point of defence will reduce damage taken by one point.</details></td>
+      <td>Decreases damage taken by a <em>flat value</em>. Calculated before reductions.<br /><details><summary class="bar-descriptor">Flat value?</summary>Every point of defence will reduce damage taken by one point.</details></td>
     </tr>
     <tr>
       <td>Reduction</td>
@@ -351,7 +351,7 @@
     <tr>
       <td>Poison</td>
       <td>100% chance to <em>poison</em></td>
-      <td>Lose approximately 2% of your max HP each turn.</td>
+      <td>Take damage equal to approximately 2% of your max HP each turn.</td>
     </tr>
     <tr>
       <td>Water</td>
@@ -366,7 +366,7 @@
     <tr>
       <td>Fire</td>
       <td>25% chance to <em>ignite</em></td>
-      <td>Lose approximately 25% of damage dealt by igniting attack in HP each turn until recovery. 25% chance of recovery each turn.</td>
+      <td>Take damage equal to approximately 25% of damage dealt by the original igniting attack each turn until recovery. 25% chance of recovery each turn.</td>
     </tr>
     <tr>
       <td>Petrification</td>
