--- a/shortcuts.html
+++ b/shortcuts.html
@@ -59,35 +59,35 @@
   </thead>
   <tbody>
     <tr>
-      <td><img src="/assets/img/icons/save.gif" alt="Hard Disk" /></td>
+      <td><img src="/assets/img/icons/save.gif" alt="Hard Disk" title="Save your game" /></td>
       <td>Ctrl + S</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/music.gif" alt="Eighth Note" /></td>
+      <td><img src="/assets/img/icons/music.gif" alt="Eighth Note" title="Toggle background music" /></td>
       <td>Ctrl + M</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/sfx.gif" alt="Two Eighth Notes" /></td>
+      <td><img src="/assets/img/icons/sfx.gif" alt="Two Eighth Notes" title="Toggle sound effects" /></td>
       <td>Ctrl + ,</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/inventory.gif" alt="Body Armour" /></td>
+      <td><img src="/assets/img/icons/inventory.gif" alt="Body Armour" title="View inventory" /></td>
       <td>I</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/back.gif" alt="Back Arrow" /></td>
+      <td><img src="/assets/img/icons/back.gif" alt="Back Arrow" title="Go back" /></td>
       <td>I</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/cancel.gif" alt="X" /></td>
+      <td><img src="/assets/img/icons/cancel.gif" alt="X" title="Cancel" /></td>
       <td>X</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/potion.gif" alt="Potion" /></td>
+      <td><img src="/assets/img/icons/potion.gif" alt="Potion" title="Drink a vial of life fluid" /></td>
       <td>P</td>
     </tr>
     <tr>
-      <td><span class="game-text">Mission Log</span> <img src="/assets/img/icons/mission log.gif" alt="Log Book" /></td>
+      <td><span class="game-text" title="Toggle Mission Log">Mission Log <img src="/assets/img/icons/mission log.gif" alt="Log Book" /></span></td>
       <td>Q</td>
     </tr>
   </tbody>
@@ -104,19 +104,19 @@
   </thead>
   <tbody>
     <tr>
-      <td><img src="/assets/img/icons/up.gif" alt="Up Arrow" /></td>
+      <td><img src="/assets/img/icons/up.gif" alt="Up Arrow" title="Move up" /></td>
       <td>W</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/left.gif" alt="Left Arrow" /></td>
+      <td><img src="/assets/img/icons/left.gif" alt="Left Arrow" title="Move left" /></td>
       <td>A</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/down.gif" alt="Down Arrow" /></td>
+      <td><img src="/assets/img/icons/down.gif" alt="Down Arrow" title="Move down" /></td>
       <td>S</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/right.gif" alt="Right Arrow" /></td>
+      <td><img src="/assets/img/icons/right.gif" alt="Right Arrow" title="Move right" /></td>
       <td>D</td>
     </tr>
     <tr>
@@ -149,15 +149,15 @@
   </thead>
   <tbody>
     <tr>
-      <td><img src="/assets/img/icons/defend.gif" alt="Shield" /></td>
+      <td><img src="/assets/img/icons/defend.gif" alt="Shield" title="Defend" /></td>
       <td>J</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/attack.gif" alt="Sword" /></td>
+      <td><img src="/assets/img/icons/attack.gif" alt="Sword" title="Attack" /></td>
       <td>K</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/flee.gif" alt="Running Man" /></td>
+      <td><img src="/assets/img/icons/flee.gif" alt="Running Man" title="Try to run away" /></td>
       <td>L</td>
     </tr>
     <tr>
