--- a/compendium.html
+++ b/compendium.html
@@ -38,7 +38,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/compendium/weapons">Weapons</a><a class="page-link" href="/compendium/armour">Armour</a><a class="page-link" href="/compendium/shields">Shields</a><a class="page-link" href="/compendium/miscellaneous">Items</a><a class="page-link" href="/compendium/skills">Skills</a><a class="page-link" href="/compendium/enemies">Enemies</a><a class="page-link" href="/compendium/world-map">Map</a></div>
+        <div class="trigger"><a class="page-link" href="/compendium/world-map">Map</a><a class="page-link" href="/compendium/guide">Guide</a><a class="page-link" href="/compendium/weapons">Weapons</a><a class="page-link" href="/compendium/armour">Armour</a><a class="page-link" href="/compendium/shields">Shields</a><a class="page-link" href="/compendium/miscellaneous">Items</a><a class="page-link" href="/compendium/skills">Skills</a><a class="page-link" href="/compendium/enemies">Enemies</a></div>
       </nav></div>
 </header><main class="page-content" aria-label="Content">
       <div class="wrapper">
@@ -55,7 +55,7 @@
 
 <h2>
   Sections
-</h2><ul><li><a class="page-link" href="/compendium/weapons">Weapons</a></li><li><a class="page-link" href="/compendium/armour">Armour</a></li><li><a class="page-link" href="/compendium/shields">Shields</a></li><li><a class="page-link" href="/compendium/miscellaneous">Miscellaneous Items</a></li><li><a class="page-link" href="/compendium/skills">Skills</a></li><li><a class="page-link" href="/compendium/enemies">Enemies</a></li><li><a class="page-link" href="/compendium/world-map">World Map</a></li></ul><a href="/">← Return to the main site</a>
+</h2><ul><li><a class="page-link" href="/compendium/world-map">World Map</a></li><li><a class="page-link" href="/compendium/guide">Guide</a></li><li><a class="page-link" href="/compendium/weapons">Weapons</a></li><li><a class="page-link" href="/compendium/armour">Armour</a></li><li><a class="page-link" href="/compendium/shields">Shields</a></li><li><a class="page-link" href="/compendium/miscellaneous">Miscellaneous Items</a></li><li><a class="page-link" href="/compendium/skills">Skills</a></li><li><a class="page-link" href="/compendium/enemies">Enemies</a></li></ul><a href="/">← Return to the main site</a>
 
 <script type="text/javascript">
   emojiToSectionName = {
