--- a/tutorial.html
+++ b/tutorial.html
@@ -444,13 +444,13 @@
 </p>
 <br />
 <p>
-  If you want to dive deeper, check out these links:
+  If you want to dive deeper, check out these pages:
   <ul>
     <li>
       <a href="shortcuts">Shortcuts/Hotkeys</a>
     </li>
     <li>
-      <a href="/compendium/mechanics">Mechanics</a>
+      <a href="compendium/guide">Game Guide</a>
     </li>
     <li>
       <a href="compendium">Compendium</a>
