--- a/compendium/weapons.html
+++ b/compendium/weapons.html
@@ -38,7 +38,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/compendium/weapons">Weapons</a><a class="page-link" href="/compendium/armour">Armour</a><a class="page-link" href="/compendium/shields">Shields</a><a class="page-link" href="/compendium/miscellaneous">Items</a><a class="page-link" href="/compendium/skills">Skills</a><a class="page-link" href="/compendium/enemies">Enemies</a><a class="page-link" href="/compendium/world-map">Map</a></div>
+        <div class="trigger"><a class="page-link" href="/compendium/world-map">Map</a><a class="page-link" href="/compendium/guide">Guide</a><a class="page-link" href="/compendium/weapons">Weapons</a><a class="page-link" href="/compendium/armour">Armour</a><a class="page-link" href="/compendium/shields">Shields</a><a class="page-link" href="/compendium/miscellaneous">Items</a><a class="page-link" href="/compendium/skills">Skills</a><a class="page-link" href="/compendium/enemies">Enemies</a></div>
       </nav></div>
 </header><main class="page-content" aria-label="Content">
       <div class="wrapper">
