--- a/compendium/miscellaneous.html
+++ b/compendium/miscellaneous.html
@@ -110,11 +110,11 @@
   </thead>
   <tbody>
     <tr>
-      <td><span id="syvre-leaf" class="record-name">Syvre Leaf</span><br /><img src="/assets/img/miscellaneous/syvre leaf.gif" alt="Syvre Leaf" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">500</span><br /><details><summary class="bar-descriptor">Dropped by</summary><ul><li><a href="enemies#drone-bee">Drone Bee</a></li><li><a href="enemies#guard-bee">Guard Bee</a></li><li><a href="enemies#queen-bee">Queen Bee</a></li></details></td>
+      <td><span id="syvre-leaf" class="record-name">Syvre Leaf</span><br /><img src="/assets/img/miscellaneous/syvre leaf.gif" alt="Syvre Leaf" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">500</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#drone-bee">Drone Bee</a></li><li><a href="enemies#guard-bee">Guard Bee</a></li><li><a href="enemies#queen-bee">Queen Bee</a></li></ul></details></td>
       <td>Be re-leafed.</td>
     </tr>
     <tr>
-      <td><span id="brummo-mint" class="record-name">Brummo Mint</span><br /><img src="/assets/img/miscellaneous/brummo mint.gif" alt="Brummo Mint" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1</span><br /><details><summary class="bar-descriptor">Dropped by</summary><ul><li><a href="enemies#satyr">Satyr</a></li><li><a href="enemies#centaur">Centaur</a></li><li><a href="enemies#siren">Siren</a></li><li><a href="enemies#gorgon">Gorgon</a></li><li><a href="enemies#harpy">Harpy</a></li><li><a href="enemies#minotaur">Minotaur</a></li><li><a href="enemies#skolopendra">Skolopendra</a></li><li><a href="enemies#pterripus">Pterripus</a></li><li><a href="enemies#cychreides">Cychreides</a></li><li><a href="enemies#hydra">Hydra</a></li><li><a href="enemies#cerberus">Cerberus</a></li><li><a href="enemies#chimera">Chimera</a></li><li><a href="enemies#stymphalian-bird">Stymphalian Bird</a></li><li><a href="enemies#teumessian-fox">Teumessian Fox</a></li><li><a href="enemies#nemean-lion">Nemean Lion</a></li></details></td>
+      <td><span id="brummo-mint" class="record-name">Brummo Mint</span><br /><img src="/assets/img/miscellaneous/brummo mint.gif" alt="Brummo Mint" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#satyr">Satyr</a></li><li><a href="enemies#centaur">Centaur</a></li><li><a href="enemies#siren">Siren</a></li><li><a href="enemies#gorgon">Gorgon</a></li><li><a href="enemies#harpy">Harpy</a></li><li><a href="enemies#minotaur">Minotaur</a></li><li><a href="enemies#skolopendra">Skolopendra</a></li><li><a href="enemies#pterripus">Pterripus</a></li><li><a href="enemies#cychreides">Cychreides</a></li><li><a href="enemies#hydra">Hydra</a></li><li><a href="enemies#cerberus">Cerberus</a></li><li><a href="enemies#chimera">Chimera</a></li><li><a href="enemies#stymphalian-bird">Stymphalian Bird</a></li><li><a href="enemies#teumessian-fox">Teumessian Fox</a></li><li><a href="enemies#nemean-lion">Nemean Lion</a></li></ul></details></td>
       <td>This herb can have surprising effects at an unexpected time.</td>
     </tr>
     <tr>
@@ -130,7 +130,7 @@
       <td>Multiplies damage by 2. Attack to consume.</td>
     </tr>
     <tr>
-      <td><span id="jagged-mushroom" class="record-name">Jagged Mushroom</span><br /><img src="/assets/img/miscellaneous/jagged mushroom.gif" alt="Jagged Mushroom" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1000</span><br /><details><summary class="bar-descriptor">Dropped by</summary><ul><li><a href="enemies#dark-asp">Dark Asp</a></li></details></td>
+      <td><span id="jagged-mushroom" class="record-name">Jagged Mushroom</span><br /><img src="/assets/img/miscellaneous/jagged mushroom.gif" alt="Jagged Mushroom" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#dark-asp">Dark Asp</a></li></ul></details></td>
       <td>Increases crit chance by 25%. Attack to consume.</td>
     </tr>
     <tr>
@@ -163,19 +163,19 @@
   </thead>
   <tbody>
     <tr>
-      <td><span id="jade-crystal" class="record-name">Jade Crystal</span><br /><img src="/assets/img/miscellaneous/jade crystal.gif" alt="Jade Crystal" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">500</span><br /><details><summary class="bar-descriptor">Dropped by</summary><ul><li><a href="enemies#arcane-asp">Arcane Asp</a></li><li><a href="enemies#diggler">Diggler</a></li><li><a href="enemies#crystal-golem-green">Crystal Golem</a></li><li><a href="enemies#chelonian-coleopteran">Chelonian Coleopteran</a></li></details></td>
+      <td><span id="jade-crystal" class="record-name">Jade Crystal</span><br /><img src="/assets/img/miscellaneous/jade crystal.gif" alt="Jade Crystal" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">500</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#arcane-asp">Arcane Asp</a></li><li><a href="enemies#diggler">Diggler</a></li><li><a href="enemies#crystal-golem-green">Crystal Golem</a></li><li><a href="enemies#chelonian-coleopteran">Chelonian Coleopteran</a></li></ul></details></td>
       <td>This gem harnesses elemental power.</td>
     </tr>
     <tr>
-      <td><span id="aquamarine-shard" class="record-name">Aquamarine Shard</span><br /><img src="/assets/img/miscellaneous/aquamarine shard.gif" alt="Aquamarine Shard" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">500</span><br /><details><summary class="bar-descriptor">Dropped by</summary><ul><li><a href="enemies#mystical-octopus">Mystical Octopus</a></li><li><a href="enemies#diggler">Diggler</a></li><li><a href="enemies#crystal-golem-blue">Crystal Golem</a></li><li><a href="enemies#chelonian-coleopteran">Chelonian Coleopteran</a></li></details></td>
+      <td><span id="aquamarine-shard" class="record-name">Aquamarine Shard</span><br /><img src="/assets/img/miscellaneous/aquamarine shard.gif" alt="Aquamarine Shard" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">500</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#mystical-octopus">Mystical Octopus</a></li><li><a href="enemies#diggler">Diggler</a></li><li><a href="enemies#crystal-golem-blue">Crystal Golem</a></li><li><a href="enemies#chelonian-coleopteran">Chelonian Coleopteran</a></li></ul></details></td>
       <td>This gem harnesses elemental power.</td>
     </tr>
     <tr>
-      <td><span id="garnet-fragment" class="record-name">Garnet Fragment</span><br /><img src="/assets/img/miscellaneous/garnet fragment.gif" alt="Garnet Fragment" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">500</span><br /><details><summary class="bar-descriptor">Dropped by</summary><ul><li><a href="enemies#unholy-crow">Unholy Crow</a></li><li><a href="enemies#diggler">Diggler</a></li><li><a href="enemies#crystal-golem-red">Crystal Golem</a></li><li><a href="enemies#chelonian-coleopteran">Chelonian Coleopteran</a></li></details></td>
+      <td><span id="garnet-fragment" class="record-name">Garnet Fragment</span><br /><img src="/assets/img/miscellaneous/garnet fragment.gif" alt="Garnet Fragment" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">500</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#unholy-crow">Unholy Crow</a></li><li><a href="enemies#diggler">Diggler</a></li><li><a href="enemies#crystal-golem-red">Crystal Golem</a></li><li><a href="enemies#chelonian-coleopteran">Chelonian Coleopteran</a></li></ul></details></td>
       <td>This gem harnesses elemental power.</td>
     </tr>
     <tr>
-      <td><span id="gold-ore" class="record-name">Gold Ore</span><br /><img src="/assets/img/miscellaneous/gold ore.gif" alt="Gold Ore" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1000</span><br /><details><summary class="bar-descriptor">Dropped by</summary><ul><li><a href="enemies#diggler">Diggler</a></li><li><a href="enemies#gold-golem">Gold Golem</a></li></details></td>
+      <td><span id="gold-ore" class="record-name">Gold Ore</span><br /><img src="/assets/img/miscellaneous/gold ore.gif" alt="Gold Ore" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#diggler">Diggler</a></li><li><a href="enemies#gold-golem">Gold Golem</a></li></ul></details></td>
       <td>This can be refined into a valuable metal.</td>
     </tr>
     <tr>
@@ -183,11 +183,11 @@
       <td>A lightweight metal with strong resistive properties.</td>
     </tr>
     <tr>
-      <td><span id="golden-horn" class="record-name">Golden Horn</span><br /><img src="/assets/img/miscellaneous/golden horn.gif" alt="Golden Horn" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1</span><br /><details><summary class="bar-descriptor">Dropped by</summary><ul><li><a href="enemies#gold-minotaur">Gold Minotaur</a></li></details></td>
+      <td><span id="golden-horn" class="record-name">Golden Horn</span><br /><img src="/assets/img/miscellaneous/golden horn.gif" alt="Golden Horn" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#gold-minotaur">Gold Minotaur</a></li></ul></details></td>
       <td>Changes forge success chance to 95%. One-time use.</td>
     </tr>
     <tr>
-      <td><span id="green-horn" class="record-name">Green Horn</span><br /><img src="/assets/img/miscellaneous/green horn.gif" alt="Green Horn" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1</span><br /><details><summary class="bar-descriptor">Dropped by</summary><ul><li><a href="enemies#green-minotaur">Green Minotaur</a></li></details></td>
+      <td><span id="green-horn" class="record-name">Green Horn</span><br /><img src="/assets/img/miscellaneous/green horn.gif" alt="Green Horn" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#green-minotaur">Green Minotaur</a></li></ul></details></td>
       <td>Triples forge success chance. One-time use.</td>
     </tr>
     <tr>
@@ -225,7 +225,7 @@
   </thead>
   <tbody>
     <tr>
-      <td><span id="macedonian-protector" class="record-name">Macedonian Protector</span><br /><img src="/assets/img/miscellaneous/macedonian protector.gif" alt="Macedonian Protector" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">0</span><br /><details><summary class="bar-descriptor">Dropped by</summary><ul><li><a href="enemies#president-of-macedonia">President of Macedonia</a></li></details></td>
+      <td><span id="macedonian-protector" class="record-name">Macedonian Protector</span><br /><img src="/assets/img/miscellaneous/macedonian protector.gif" alt="Macedonian Protector" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">0</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#president-of-macedonia">President of Macedonia</a></li></ul></details></td>
       <td>Increases block chance while defending.</td>
     </tr>
     <tr>
